--- a/C#/LabviewDXFViewer/packages.config
+++ b/C#/LabviewDXFViewer/packages.config
@@ -3,14 +3,13 @@
   <package id="Accord" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Controls" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Controls.Imaging" version="3.8.2-alpha" targetFramework="net472" />
-  <package id="Accord.Controls.Vision" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Imaging" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.MachineLearning" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Math" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Statistics" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Video" version="3.8.2-alpha" targetFramework="net472" />
   <package id="Accord.Video.DirectShow" version="3.8.2-alpha" targetFramework="net472" />
-  <package id="Accord.Vision" version="3.8.2-alpha" targetFramework="net472" />
+  <package id="Accord.Vision" version="3.8.0" targetFramework="net472" />
   <package id="fernandreu.ScintillaNET" version="4.0.4" targetFramework="net472" />
   <package id="Flurl" version="3.0.2" targetFramework="net472" />
   <package id="Flurl.Http" version="3.2.0" targetFramework="net472" />
